Fix padding on iOS

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -24,3 +24,15 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 .selected {
   background-color: #d3d3d3;
 }
+
+.platform-android {
+  .tabs-content {
+    @extend .has-tabs-top;
+  }
+}
+
+.platform-ios {
+  .tabs-content {
+    @extend .has-tabs;
+  }
+}
